--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "description": "RSS agregator project by ThisisHappy",
   "main": "src/index.js",
   "scripts": {
-    "build": "NODE_ENV=production npx webpack"
+    "build": "NODE_ENV=production npx webpack",
+    "install": "npm install"
   },
   "repository": {
     "type": "git",
