--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "description": "RSS agregator project by ThisisHappy",
   "main": "src/index.js",
   "scripts": {
-    "build": "NODE_ENV=production npx webpack",
-    "install": "npm install"
+    "build": "NODE_ENV=production npx webpack"
   },
   "repository": {
     "type": "git",
